<resources>

    <string name="app_name">MNav</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MNav</string>
    <string name="address_default">e.g. 1670 beyst</string>
    <string name="go_button">GO</string>
    <string name="start_prompt">Enter Destination</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="_"></string>
    <string name="search_campus">Search campus</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="current_lat">Current lat:</string>
    <string name="current_long">Current long:</string>
    <string name="bldg_abbr">Abbreviated Building Name</string>
    <string name="door_nick">Door Nickname (e.g. \'North Entrance\')</string>
    <string name="bus_routes">Bus Routes</string>
    <string name="route">Route</string>
    <string name="building_finder">Building Finder</string>
    <string name="dest_bldg_instructions">What would you like to do?</string>
    <string name="schedule">Schedule</string>
    <string name="class_string">Class</string>
    <string name="location">Location</string>
    <string name="zero_time">00:00</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="title_activity_schedule_edit">MainActivity</string>
    <string name="today_string">Today\'s Schedule</string>
    <string name="select_event_edit">Select Event to Edit</string>
    <string name="add_event">Add Class</string>
    <string name="begin_time">Begin Time</string>
    <string name="end_time">End Time</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>
    <string name="location_hint">e.g. 1670 BBB</string>
    <string name="class_hint">e.g. EECS 280</string>
    <string name="done">Done</string>
    <string name="no_events">No Classes Found</string>
    <string name="select_day_string">Select A Day</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="help_hints">Help &amp; Hints</string>
    <string name="restore_intro">Restore \'Tip:\' prompts</string>
    <string name="ok">Ok</string>
    <string name="set">Set</string>
    <string name="dash">-</string>
    <string name="reset_map">Reset Map</string>
    <string name="info_dest">You can enter a building name or abbreviation with or without a room number. Alternatively, you can leave it blank and hit search to view the map from your current location.</string>
    <string name="info_schedule">Here you can enter in your class schedule and MNav will route to your classes automatically throughout the day.</string>
    <string name="info_bus_routes">Quickly view a live map of all the buses on campus as broadcasted by the Magic Bus XML feed.</string>
    <string name="info_building_finder">Easily find any building on campus by browsing a comprehensive list and pressing the building you would like to find.</string>
    <string name="section">Section Number</string>
    <string name="crash_toast_text">Oops! MNav has crashed, but a crash report has been sent to the MNav development team to help fix the issue!</string>
    <string name="copyright">Developed by Jeremy Darby, Bill Hass, and Evan Molosky at the University of Michigan for EECS 441.\nCopyright © 2012 - Aether Applications</string>
    <string name="mailing_list_url">mnav.android@umich.edu</string>
    <string name="facebook_url">www.facebook.com/mnavforandroid</string>
    <string name="version_num">v0.02_alpha</string>
    <string name="filter_text">type to filter</string>

</resources>