<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/textEntryLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="17dp" >

        <EditText
            android:id="@+id/editText_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_begin_time"
            android:layout_marginBottom="3dp"
            android:layout_toRightOf="@+id/textView_begin_time"
            android:clickable="true"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:hint="@string/zero_time"
            android:inputType="time" />

        <EditText
            android:id="@+id/editText_begin_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_location"
            android:layout_marginBottom="3dp"
            android:layout_toRightOf="@+id/textView_begin_time"
            android:clickable="true"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:hint="@string/zero_time"
            android:inputType="time" />

        <EditText
            android:id="@+id/editText_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/autoCompleteTextView_class"
            android:layout_marginBottom="3dp"
            android:layout_toRightOf="@+id/textView_begin_time"
            android:ems="10"
            android:hint="@string/address_default"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/textView_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/editText_location"
            android:layout_marginLeft="5dp"
            android:text="@string/location"
            android:textSize="20sp" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="3dp"
            android:layout_toRightOf="@+id/textView_begin_time"
            android:completionThreshold="2"
            android:ems="10"
            android:hint="@string/class_hint"
            android:inputType="textPostalAddress" >

            <requestFocus />
        </AutoCompleteTextView>

        <TextView
            android:id="@+id/textView_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/autoCompleteTextView_class"
            android:layout_marginLeft="5dp"
            android:text="@string/class_string"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_begin_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/editText_begin_time"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/begin_time"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText_end_time"
            android:layout_marginLeft="5dp"
            android:text="@string/end_time"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/checkBoxLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textEntryLayout"
        android:layout_marginTop="10dp" >

        <CheckBox
            android:id="@+id/checkBoxMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/monday" />

        <CheckBox
            android:id="@+id/checkBoxTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkBoxMonday"
            android:layout_toRightOf="@+id/checkBoxMonday"
            android:text="@string/tuesday" />

        <CheckBox
            android:id="@+id/checkBoxWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkBoxTuesday"
            android:layout_toRightOf="@+id/checkBoxTuesday"
            android:text="@string/wednesday" />

        <CheckBox
            android:id="@+id/checkBoxThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkBoxWednesday"
            android:layout_toRightOf="@+id/checkBoxWednesday"
            android:text="@string/thursday" />

        <CheckBox
            android:id="@+id/checkBoxFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkBoxThursday"
            android:layout_toRightOf="@+id/checkBoxThursday"
            android:text="@string/friday" />

        <CheckBox
            android:id="@+id/checkBoxSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/checkBoxThursday"
            android:layout_below="@+id/checkBoxThursday"
            android:text="@string/sunday" />

        <CheckBox
            android:id="@+id/checkBoxSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBoxTuesday"
            android:layout_toLeftOf="@+id/checkBoxWednesday"
            android:text="@string/saturday" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/button_cancel_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button_cancel_edit"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@+id/button_cancel_edit"
            android:text="@string/done" />
    </RelativeLayout>

</RelativeLayout>