<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/stepbystep_layout"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:paddingLeft="25dp" >

    <!-- removed for 3.2.2 -->

    <TextView
        android:id="@+id/textView_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_location"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/textView_location"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/zero_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_class"
        android:layout_marginLeft="20dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_location"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/textView_dash"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/zero_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_dash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_location"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/textView_begin"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/dash"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/class_string"
        android:textSize="35sp" />

</RelativeLayout>